--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+.vscode/*
 node_modules/*
 dist/*
 npm-debug.log
@@ -6,3 +7,4 @@ yarn-error.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
