--- a/package.json
+++ b/package.json
@@ -5,17 +5,26 @@
   "author": "",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "node build/dev-server.js --host 0.0.0.0",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src",
-    "new": "node build/fs-init.js",
-    "start": "node build/dev-server.js"
+    "new": "node build/fs-init.js"
   },
   "dependencies": {
+    "antd": "^3.6.3",
     "axios": "^0.16.1",
+    "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
+    "core-decorators": "^0.20.0",
+    "formsy-react": "^1.1.4",
     "i18next": "^11.2.2",
+    "js-cookie": "^2.2.0",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
+    "qrcode.react": "^0.8.0",
     "react": "^16.3.1",
+    "react-bodymovin": "^1.1.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.3.1",
     "react-i18next": "^7.6.0",
     "react-lazyload": "^2.3.0",
@@ -24,15 +33,19 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-swipe": "^5.1.1",
+    "react-tradingview-widget": "^1.2.5",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.2",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@babel/helper-module-imports": "^7.0.0-beta.54",
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-import": "^1.8.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -41,8 +54,9 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^1.1.3",
+    "cheerio": "^1.0.0-rc.2",
     "compression-webpack-plugin": "^1.1.11",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -53,38 +67,37 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^0.10.0",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.17.3",
+    "http-proxy-middleware": "^0.18.0",
     "koa": "^2.5.0",
     "koa-connect-history-api-fallback": "^0.3.1",
     "koa-mount": "^3.0.0",
     "koa-static": "^4.0.2",
-    "koa-webpack-dev-middleware": "^2.0.2",
-    "koa-webpack-hot-middleware": "^1.0.3",
+    "koa2-connect": "^1.0.2",
     "last-call-webpack-plugin": "^3.0.0",
     "mini-css-extract-plugin": "^0.4.0",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.8.3",
     "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
     "ora": "^1.1.0",
     "postcss-loader": "^2.1.3",
+    "react-svg-loader": "^2.1.0",
     "rimraf": "^2.6.0",
     "sass": "^1.1.1",
     "sass-loader": "^7.0.0",
     "semver": "^5.3.0",
-    "style-loader": "^0.20.3",
+    "style-loader": "^0.21.0",
     "sw-precache-webpack-plugin": "^0.11.5",
     "syntax-error": "^1.4.0",
     "uglify-es": "^3.3.9",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^0.5.7",
+    "url-loader": "^0.5.9",
     "webpack": "^4.10.2",
     "webpack-bundle-analyzer": "^2.11.1",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.2",
     "yaml-loader": "^0.4.0"
   },
