--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-swipe": "^5.1.1",
     "react-tradingview-widget": "^1.2.5",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.2",
@@ -91,6 +90,7 @@
     "semver": "^5.3.0",
     "style-loader": "^0.21.0",
     "sw-precache-webpack-plugin": "^0.11.5",
+    "swiper": "^4.5.0",
     "syntax-error": "^1.4.0",
     "uglify-es": "^3.3.9",
     "url-loader": "^0.5.9",
